<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Broadr</string>
    <string name="main_activity_title">Messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_bg">Show background</string>
    <string name="action_location">Location</string>
    <string name="action_search">Search</string>
    <string name="action_clear_suggestions">Clear Suggestions</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_show_in_map">Show in map</string>
    <string name="title_activity_detailed_view">Comments</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base">Broadr base</string>
    <string name="title_activity_bootup">Broadr bootup</string>
    <string name="message_search_hint">Search ravens</string>
    <string name="title_activity_search_results">Search results</string>
    <string name="gcm_registration_failed">Registering with server has failed</string>
    <string name="location_alert_title">Turn on location services</string>
    <string name="location_alert_message">Need your current location to start</string>
    <string name="location_alert_positive_button">OK</string>
    <string name="share_link">Shared from Broadr</string>
    <string name="share_link_success_message">The link is ready to be pasted</string>
    <string name="share_link_err_message">Could not copy the link</string>
    <string name="notif_sent_raven">Sent the raven</string>
    <string name="message_not_yet_sent">This message is not sent yet</string>
    <string name="location_update_title">Update location</string>
    <string name="location_update_message">Turn on location services</string>
    <string name="location_alert_yes">Yes</string>
    <string name="location_alert_no">No</string>
    <string name="background_not_available">Background image is not available</string>
    <string name="search_history_cleared">Cleared search history</string>
    <string name="message_sending">Sending raven</string>
    <string name="time_ago">ago</string>
    <string name="location_near_by">Near by</string>
    <string name="location_little_far">Little far</string>
    <string name="location_out_of_moon">Out of moon!!!</string>
    <string name="location_address">Address</string>
    <string name="message_content">Message Content</string>
    <string name="detailed_view_send_hint">Yo palooka, say anything !</string>
    <string name="main_send_hint">What\'s up punchy ?</string>
    <string name="location_old_title">Location is a bit old</string>
    <string name="location_old_alert_title">Still at the same place ?</string>
    <string name="location_old_yes">Find new location</string>
    <string name="location_old_no">Yes, I\'m at the same place</string>
    <string name="location_need_alert_title">Need a location</string>
    <string name="location_need_alert_msg">Yo!!! Where are you ?</string>
    <string name="location_need_yes_btn">Let\'s find out</string>
    <string name="location_need_no_btn">Not interested</string>
    <string name="gcm_notif_checkout_new_messages">Checkout new messages</string>
    <string name="gcm_notif_checkout">"Checkout "</string>
    <string name="gcm_notif_new_messages">New messages</string>
    <string name="messages_new_arrival">New messages arrived</string>
    <string name="detailview_share_link">"Checkout the message from Broadr: "</string>
    <string name="share_via">Share via</string>
    <string name="unknown">Unknown place</string>
    <string name="notif_frequency_change">Change the frequency of notifications</string>
    <string name="loc_notif_frequency_change">Change the frequency to get new location</string>
    <string name="bootup_message">Hi there. Welcome, Broadr lets you send a message to your place anonymously. Whenever you move to new city or town you will be able to see the messages posted there. Use it with consciousness. Post something useful and interesting.</string>
    <string name="booting_up">Booting up</string>
    <string name="need_location">Need your location to start</string>
    <string name="got_location">Yay, Got the location!</string>
    <string name="need_play_services">Need Google play services to work</string>
    <string name="tech_stuff">Doing tech stuff</string>
    <string name="network_not_available">Network is not available</string>
    <string name="touch_continue">Please touch continue</string>
    <string name="bad_happened">Sorry, Some bad has happened.</string>

</resources>
