<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_current_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="110"
        android:title="@string/action_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_clear_suggestions"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:orderInCategory="120"
        android:title="@string/action_clear_suggestions"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_show_bg"
        android:orderInCategory="130"
        android:title="@string/action_show_bg"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="140"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
